# spdx_licenses

./: CHANGES.md  README.md  dune-project  spdx_licenses.opam
src/: dune  exceptionIDs.ml  lexer.mll  licenseIDs.ml  parser.mly  spdx_licenses.ml  spdx_licenses.mli  types.mli
src/ids/: dune  generate.ml
tests/: tests.ml
