opam-version: "2.0"
version: "0.1.0~~"
synopsis: "A library to parse SPDX licenses formats"
description: """
See https://spdx.org/licenses/
"""
maintainer: ["Kate <kit.ty.kate@disroot.org>"]
authors: ["Kate <kit.ty.kate@disroot.org>"]
license: "MIT"
homepage: "https://github.com/kit-ty-kate/spdx_licenses"
bug-reports: "https://github.com/kit-ty-kate/spdx_licenses/issues"
dev-repo: "git+https://github.com/kit-ty-kate/spdx_licenses.git"
depends: [
  "ocaml" {>= "4.03"}
  "dune" {>= "2.3"}
  "alcotest" {with-test & >= "1.4.0"}
  "odoc" {with-doc}
]
build: ["dune" "build" "-p" name "-j" jobs "@install" "@doc" {with-doc}]
run-test: ["dune" "runtest" "-p" name "-j" jobs]
