opam-version: "2.0"
version: "1.4.0"
synopsis: "A library providing a strict SPDX License Expression parser"
description: """
An OCaml library aiming to provide an up-to-date and strict SPDX License Expression parser.
It implements the format described in: https://spdx.github.io/spdx-spec/v3.0.1/annexes/spdx-license-expressions/
See https://spdx.org/licenses/ for more details.
"""
maintainer: "Kate <kit-ty-kate@exn.st>"
authors: "Kate <kit-ty-kate@exn.st>"
license: "MIT"
homepage: "https://github.com/kit-ty-kate/spdx_licenses"
bug-reports: "https://github.com/kit-ty-kate/spdx_licenses/issues"
dev-repo: "git+https://github.com/kit-ty-kate/spdx_licenses.git"
depends: [
  "ocaml" {>= "4.08"}
  "dune" {>= "2.3"}
  "alcotest" {with-test & >= "1.4.0"}
]
build: ["dune" "build" "-p" name "-j" jobs]
run-test: ["dune" "runtest" "-p" name "-j" jobs]
