(library
 (public_name spdx_licenses)
 (modules_without_implementation types)
 (libraries result))
; TODO: Remove this when upgrading to OCaml >= 4.08

(rule
 (targets licenseIDs.ml exceptionIDs.ml)
 (deps ids/licenses.json ids/exceptions.json)
 (mode promote)
 (enabled_if (= %{profile} "regenerate"))
 (action (run ./ids/generate.exe)))

(ocamllex lexer)
(ocamlyacc parser)
