(rule
 (targets licenses.json)
 (mode promote)
 (action (run curl -sLO https://raw.githubusercontent.com/spdx/license-list-data/master/json/licenses.json)))

(rule
 (targets exceptions.json)
 (mode promote)
 (action (run curl -sLO https://raw.githubusercontent.com/spdx/license-list-data/master/json/exceptions.json)))

(executable
 (name generate)
 (libraries ezjsonm))
